[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="level_select" type="Button" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_right = 448.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chara_select" type="Button" parent="."]
modulate = Color( 1, 0.654902, 0, 1 )
margin_left = 448.0
margin_right = 896.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unlock" type="Button" parent="."]
modulate = Color( 0.0784314, 1, 0, 1 )
margin_left = 896.0
margin_right = 1280.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="level_select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="chara_select" to="." method="_on_chara_select_pressed"]
[connection signal="pressed" from="unlock" to="." method="_on_unlock_pressed"]
